--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
 *{
     margin: 0%;
 }
+h1,h2,h3{
+    font-family: var(--custom-font-family);
+    text-transform: uppercase;
+    font-size: 30px;
+}
+:root{
+    --custom-font-family:"Merienda";
+}
+p,a{
+    font-family: var(--custom-font-familia);
+    font-size: 20px;
+}
+:root{
+    --custom-font-familia:"Bree Serif";
+}
 .wrapper{
     width: 100%;
     margin: 0 auto;
@@ -19,18 +34,34 @@
 } */
 .inform{
     background-color: black;
-    width: 20%;
+    width: 17%;
     text-align: center;
     /* padding: 10px 30px; */
 }
 .info a{
-    color: white;
+    color: #ffffff;
     text-decoration: none;
     display: block;
     padding: 20px 0px ;
+    font-size: 20px;
+    /* border-bottom: 1px solid #ccc; */
+}
+.info p{
+    color: #FFFFFF;
+    margin-top: 20px;
+    /* font-size: 20px; */
+}
+.follow{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.follow img{
+    width: 30px;
+    border-radius: 0;
 }
 .info a:hover{
-    color: #5899E2;
+    color: #0000ff;
 }
 /*
 .logo{
@@ -49,7 +80,7 @@
 */
 .main{
     background-image: url(images/pexels-taha-samet-arslan-14573611.jpg);
-    width: 80%;
+    width: 83%;
     /* background-size:100% ; */
 }
 .text{
@@ -62,7 +93,7 @@
 }
 .main p{
     margin: 20px 0px;
-    font-size: 20px;
+    /* font-size: 20px; */
 }
 /* .item{
     display: flex;
@@ -82,7 +113,7 @@
     height: 20em;
 }
 section:first-of-type{
-    background-color: blue;
+    background-color: #0000ff;
 }
 .meet{
     display: flex;
@@ -101,12 +132,12 @@ section:first-of-type{
     padding: 15px 35px;
     border-radius: 30px;
     /* outline: none; */
-    background-color: black;
+    background-color: #000000;
     border: none;
 }
 .meet a{
     text-decoration: none;
-    color: white;
+    color: #ffffff;
 }
 .images img{
     width: 50%;
@@ -133,7 +164,7 @@ section:nth-of-type(2){
     margin: 20px 0px;
 }
 .two a{
-    color: white;
+    color: #ffffff;
     text-decoration: none;
     padding-left:10px ;
 }
@@ -176,7 +207,7 @@ section:nth-of-type(2){
 }
 .image{
     /* border: 5px solid black; */
-    box-shadow: 2px 2px 2px 2px black;
+    box-shadow: 2px 2px 2px 2px #000000;
 }
 .image:nth-of-type(2) img{
     width: 8em;
@@ -184,18 +215,6 @@ section:nth-of-type(2){
 section:nth-of-type(3) h1{
     text-align: center;
     margin: 15px 0px;
-}
-section:nth-of-type(3){
-    /* background-image: linear-gradient(#868F96 , #596164); */
-}
-
-
-section:nth-of-type(4) h1{
-    text-align: center;
-}
-section:nth-of-type(4){
-    background-color: blueviolet;
-    
 }
 .first p{
     width: 40%;
@@ -220,16 +239,24 @@ section:nth-of-type(4){
     gap:10px ;
 }
 input{
-    padding: 10px 30px;
-    margin: 10px;
+    padding: 10px ;
+    width: 25rem;
+    margin: 8px 0px;
+}
+form{
+    margin: 20px 10px;
 }
 input:last-of-type{
-    padding: 0px 30px 60px 30px;
+    /* padding: 6px 2px 60px 20px; */
+    padding-bottom: 60px;
+    width: 25rem;
 }
 .third{
     background-image: linear-gradient(#5899E2 ,#FFFFFF);
     border-radius: 10px 10px 0px 0px;
     margin-bottom: 30px;
+    width: 65%;
+    text-align: center;
 }
  .p-three{
     display: none;
@@ -274,8 +301,12 @@ footer h2{
 }
 footer img{
     width: 20px;
+    border-radius: 0;
 
 } 
+footer p{
+    padding-bottom: 10px;
+}
 .link img {
     display: none;
     /* visibility: hidden; */
@@ -430,7 +461,7 @@ footer img{
     }
     .info a{
         display: none;
-        color: white;
+        color: #ffffff;
         text-decoration: none;
         display: block;
         padding: 20px 0px ;
@@ -451,10 +482,10 @@ footer img{
      } 
      
      .links {
-        background-color: black;
+        background-color: #000000;
         border-radius: 5px;
         width: 100px;
-        border: 2px solid black;
+        /* border: 2px solid black; */
         position: absolute;
         transition: .3s ease;
      } 
@@ -507,13 +538,6 @@ footer img{
         display: block;
         width: 90%;
         margin: 0 auto;
-    }
-    .stacks{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    .stacks img{
-        width: 10em;
     }
     .contact{
         display: block;
@@ -572,19 +596,52 @@ footer img{
     .image:nth-of-type(2) img{
         width: 15em;
     }
-    .stacks{
+     .stacks{
         display: grid;
         grid-template-columns: 1fr ;
         width: 50%;
         margin: 0 auto;
         gap: 50px;
+        text-align: center;
     }
+    .stacks img{
+        width: 9em;
+        margin: 10px;
+
+    }
+    .image{
+        /* border: 5px solid black; */
+         box-shadow: 2px 2px 2px 2px #000000;
+    }
+    .image:nth-of-type(2) img{
+        width: 15em;
+    } 
     .f-one img{
         width: 3em;
     }
     .f-two img{
         width: 2em;
      }
+     input{
+        padding: 10px ;
+        width: 15rem;
+        margin: 8px 0px;
+    }
+    form{
+        margin: 20px 10px;
+    }
+    input:last-of-type{
+        /* padding: 6px 2px 60px 20px; */
+        padding-bottom: 60px;
+        width: 15rem;
+    }
+    .third{
+        background-image: linear-gradient(#5899E2 ,#FFFFFF);
+        border-radius: 10px 10px 0px 0px;
+        margin-bottom: 30px;
+        width: 70%;
+        text-align: center;
+    }
      /* .icon i:hover .links{
         display: block;
      } */
